--- a/Address_book_primary_version.vcxproj.filters
+++ b/Address_book_primary_version.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>资源文件</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
