--- a/Address_book_primary_version.vcxproj
+++ b/Address_book_primary_version.vcxproj
@@ -142,11 +142,13 @@
     <Text Include="README.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Cuser.cpp" />
     <ClCompile Include="CuserMgr.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cuser.h" />
     <ClInclude Include="CuserMgr.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
