--- a/Address_book_primary_version.vcxproj.filters
+++ b/Address_book_primary_version.vcxproj.filters
@@ -32,12 +32,18 @@
     <ClCompile Include="Cuser.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CuserMgr.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Cuser.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="data.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
