增加了随机产生姓名电话地址的功能

--- a/Address_book_primary_version.vcxproj
+++ b/Address_book_primary_version.vcxproj
@@ -142,6 +142,7 @@
     <Text Include="README.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Batch data.cpp" />
     <ClCompile Include="data.cpp" />
     <ClCompile Include="Cuser.cpp" />
     <ClCompile Include="CuserMgr.cpp" />
