--- a/Address_book_primary_version.vcxproj.filters
+++ b/Address_book_primary_version.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="data.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Batch data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CuserMgr.h">
